Foreign Key Bug Solved !

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -3,11 +3,11 @@
     "username": "root",
     "password": "Celso_bixa2014",
     "database": "nlw",
-    "host": "127.0.0.1",
+    "host": "localhost",
     "dialect": "mysql",
     "define": {
-      "timestamps": true,
-      "underscored": true
+      "underscored": true,
+      "timestamps": true
     }
   }
 }
